--- a/public/acesso.html
+++ b/public/acesso.html
@@ -10,26 +10,26 @@
 <body>
   <h1>Secrets</h1>
   <ul>
-    <li>When making chocolate desserts, always add a little salt. It makes the chocolate flavour more intense.</li>
-    <li>Whenever you travel abroad bring a new soundtrack for each place you visit, preferably one you have never heard
-      before.
-      In the future, every time you listen to each soundtrack again they will bring you vivid memories of the places you
-      have
-      visited.</li>
-    <li>Do not try to be the person your parents would want you to be. Be the person you would like your child to be be.
-      It more
-      clearly
-      defines your own convictions, desires, goals, and motivates you to be your best.</li>
-    <li>If a friend or a family member gets diagnosed with dementia or alzheimer, in the early stages try to find out
-      what their
-      favorite songs of all time are. In this way you would be able to create a playlist for them that could be of great
-      benefit in the later stages of the disease.</li>
-    <li>When a friend is upset, ask them one simple question before saying anything else: 'Do you want to talk about it
-      or do
-      you want to be distracted from it?'</li>
-    <li>If you ever forget your WiFi password or you want to get your school WiFi password etc. Just type this command
-      into the
-      command line of a computer already connected to that WiFi: netsh wlan show profile WiFi-name key=clear</li>
+    <li>Ao fazer sobremesas de chocolate, adicione sempre um pouco de sal. Torna o sabor do chocolate mais intenso.</li>
+    <li>Sempre que viajar para o exterior traga uma nova trilha sonora para cada lugar que visitar, de preferência uma que você nunca tenha ouvido
+      antes.
+      No futuro, cada vez que você ouvir cada trilha sonora novamente, elas lhe trarão lembranças vívidas dos lugares onde você esteve.
+      ter
+      visitado.</li>
+    <li>Não tente ser a pessoa que seus pais gostariam que você fosse. Seja a pessoa que você gostaria que seu filho fosse.
+      É mais
+      claramente
+      define suas próprias convicções, desejos, objetivos e motiva você a dar o melhor de si.</li>
+    <li>Se um amigo ou membro da família for diagnosticado com demência ou Alzheimer, tente descobrir nos estágios iniciais
+      qual é o seu
+      músicas favoritas de todos os tempos são. Desta forma, você poderá criar uma lista de reprodução para eles que poderá ser de grande utilidade.
+      benefício nos estágios posteriores da doença.</li>
+    <li>Quando um amigo estiver chateado, faça-lhe uma pergunta simples antes de dizer qualquer outra coisa: 'Você quer conversar sobre isso?
+      ou faça
+      você quer se distrair disso?'</li>
+    <li>Se você esquecer sua senha do WiFi ou quiser obter a senha do WiFi da escola, etc. Basta digitar este comando
+      para dentro do
+      linha de comando de um computador já conectado a esse WiFi: netsh wlan show profile WiFi-name key=clear</li>
   </ul>
 
 </body>
